dist_man1_MANS=

if BUILD_XNETD
  dist_man1_MANS+=xnetd.1
endif

if ENABLE_QT
  dist_man1_MANS+=xnet-qt.1
endif

if BUILD_XNET_CLI
  dist_man1_MANS+=xnet-cli.1
endif

if BUILD_XNET_TX
  dist_man1_MANS+=xnet-tx.1
endif

if ENABLE_WALLET
if BUILD_XNET_WALLET
  dist_man1_MANS+=xnet-wallet.1
endif
endif
